objects/JBCXM__ScoringSchemeDefinition__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Color__c</fullName>
        <label>Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Display__c</fullName>
        <label>Display</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__From__c</fullName>
        <label>From</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Grade__c</fullName>
        <label>Grade</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__SchemeId__c</fullName>
        <label>Scheme Id</label>
        <referenceTo>JBCXM__ScoringScheme__c</referenceTo>
        <relationshipLabel>Scorecard Scoring Scheme Definition</relationshipLabel>
        <relationshipName>SCScoringSchemeDefn</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__Score__c</fullName>
        <label>Score</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__To__c</fullName>
        <label>To</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Scorecard Scoring Scheme Definition</label>
    <nameField>
        <label>Scoring Scheme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scorecard Scoring Scheme Definition</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>